# DTALite

./: .gitignore  CMakeLists.txt  DTALite.sln  DTALite.vcxproj  README.md  build_config.h.in  demand_file_list.csv  demand_period.csv  final_summary.csv  link_type.csv  mode_type.csv  scenario_index_list.csv
DTALite_DLL/DTALite_DLL_test/: link_performance.csv  log.txt  test_dll.py
DTALite_DLL_test/: test_dll.py
DTALite_DLL_test/Braess's_Paradox/: link.csv  settings.csv
DTALite_DLL_test/Sioux_Falls_network/: link.csv
data/: FOCUSING_use-cases-list.docx  FOCUSING_use-cases-master-file.xlsx  link_type_NVTA.csv  mode_type_NVTA.csv  ~$sting_traffic-assignment-package.docx
data/01_Sioux_Falls/: demand.csv  demand_file_list.csv  demand_period.csv  link_performance_s0_25nb.csv  link_performance_summary.csv  system_performance_summary.csv
data/01_node_link_only/: system_performance_summary.csv
data/01_two_corridor/: link.csv  log.txt
data/02_Braess's_Paradox/: demand.csv
data/03_multi_scenario/: model_link.csv  model_node.csv
data/03_three_corridor/: link.csv  log.csv
data/04_multi_period_Sioux_Falls/: link_performance_summary_2way.csv  model_node.csv  route_assignment_s0_25nb.csv  zonal_hierarchy_mapping.csv
data/05_Chicago_Regional/: link.csv  node.csv  settings.yml
data/05_Chicago_Sketch/: link_performance_s2_2050.csv  link_type.csv  log_shortest_path_tree.csv  scenario_index_list.csv
data/05_Tucson_planning_network/: demand.csv  link.csv  node.csv  settings.yml
data/05_West_Jordon_Utah_network/: demand_hov.csv  demand_truck.csv  link.csv  node.csv  settings.yml
data/06_ODME_node_link_demand/: settings.csv
data/07_ODME_West_Jordan_Utah/: agent.csv  demand.csv
data/08_UE_3_corridor_Network/: agent_0_base.csv  agent_1_info.csv  district_performance_s0_base.csv  district_performance_s1_info.csv  dynamic_traffic_management.csv  final_summary.csv  link_performance_s0_base.csv  link_performance_s1_info.csv  link_performance_summary.csv  link_performance_summary_2way.csv  log_label_correcting.txt  od_performance_summary.csv  route_assignment_s0_base.csv  route_assignment_s1_info.csv  system_performance_summary.csv  td_link_performance.csv  td_link_performance1_info.csv  trace.csv  trajectory_0_base.csv  trajectory_1_info.csv  zonal_hierarchy_mapping.csv
data/09_node_link_demand_subarea/: link_performance_s0_25nb.csv  system_performance_summary.csv
data/10_Arizona_ICM/: 10_Arizona_ICM - Shortcut.lnk  agent.csv  demand.csv  image.bpw  image.ini  link.csv  log.csv  settings.csv
data/10_Dubai/: zone.csv
data/11_Berkeley_Highway_Lab-Network/: BHL.qgz  JTaylor Sample.pptx  NEXTA_Settings.ini  SensorDataDay001.csv  SensorDataDay002.csv  SensorDataDay004.csv  SensorDataDay006.csv  SensorDataDay012.csv  SensorDataDay013.csv  SensorDataDay016.csv  SensorDataDay019.csv  SensorDataDay020.csv  SensorDataDay022.csv  SensorDataDay023.csv  SensorDataDay025.csv  SensorDataDay028.csv  SensorDataDay029.csv  SensorDataDay030.csv  export_path_speed.plt  export_path_speed.txt  image.bpw  link.csv  node.csv
data/12_California_405/: I-405.qgz  image.bpw  link_performance.csv
data/13_GTFS/: agency.txt  agent.csv  frequencies.txt  link.csv  node.csv  routes.txt  stops.txt  transfers.txt
data/14_GTFS_Amtrak/: agency.txt  agent2.txt  agent3.txt  agent4.txt  calendar.txt  (+6 more)
dataset_backup/: DTA.h  flash_dta.cpp  main_api.cpp  output.h  scenario_API.h  teestream.h  trip_generation.h  utils.h
dataset_v1/: DTALite Log_v2.docx  Log systems.docx  Testing_traffic assignment package_v1.docx  log_main.txt  settings.csv  ~$sting_traffic assignment package_v1.docx
doc/: DTALite-S version 0.7.docx  QGIS_NEXTA_visulization.md  readme.md  ~$NeXTA_user_guide.md
docs/: DTALite_programming_guide.doc  readme.md  ~$readme.md
include/: demand.h  global.h  handles.h  stdcsv.h  supply.h
learning_doc/: Lesson_1_Network_Basics.md  Lesson_2_Trip_generation.md  Lesson_3_Network_Equilibrium.md  Lesson_6_OD_Demand_Estimation.md
lib/: yaml-cpp.lib
release/: 1-click_Steps.docx  NEXTA_Settings.ini  TD_link_performance_horizon.csv  agent.csv  agent_type.csv  demand_file_list.csv  demand_period.csv  dynamic_link_performance.csv  final_summary.csv  link.csv  link_performance.csv  link_type.csv  log.csv  log.txt  log_main.txt  log_shortest_path_tree.txt  model_cell.csv  model_node.csv  od_accessibility.csv  route_assignment.csv  settings.csv  static_link_performance.csv  trace.csv  trajectory.csv
self_learning/: Chapter_2_Network_Equilibrium_with_Braess_Paradox.docx  Chapter_2_Network_Equilibrium_with_Braess_Paradox_v2.docx  Lesson_2b_4_step_process_tutorial.xlsx  Lesson_3_Network_Equilibrium.md  Lesson_3_Network_Equilibrium_with_Braess_Paradox.docx  ~$sson_3_Network_Equilibrium.docx
self_learning_doc/: Lesson_5_Signal_Timing.md
src/: DTA.h  DTALite.sln  DTA_geometry.cpp  DTA_geometry.h  ODME.h  VDF.h  assignment.h  config.h  flash_dta.cpp  input.h  input_backup.h  main_api.cpp  output.h  routing.h  scenario_API.h  shared_code.h  simulation.cpp  trip_generation.h  utils.cpp  utils.h
src/cpp/: CMakeLists.txt  DTA.h  DTALite.sln  DTALite.vcxproj  DTA_geometry.cpp  DTA_geometry.h  ODME.h  STS_Routing.h  VDF.h  assignment.h  config.h  flash_dta.cpp  input.h  main_api.cpp  output.h  routing.h  scenario_API.h  shared_code.h  simulation.cpp  teestream.h  trace2od.cpp  trip_generation.h  utils.cpp  utils.h
src/cpp/AgentLite/: Resource.h  STALite.cpp  main_api.cpp  signal_api.cpp
src/cpp/version1/AgentLite/: AgentLite.vcxproj  AgentLite.vcxproj.filters  main_api.cpp  signal_api.cpp  stdafx.h
src/src/: CMakeLists.txt  DTALite.vcxproj  config.h  flash_dta.cpp  log.txt  main_api.cpp  teestream.h  utils.cpp  utils.h
src/v2/DLL_src/DP/: CMakeLists.txt  DP.vcxproj  FlashDTA.cpp  Makefile  MathLibrary.cpp  MathLibrary.h  main_api.cpp
test/: NEXTA_Settings.ini  dtalite_s_base.py  export_linkMOE_.csv  link.csv  link_performance.csv  zone.csv
test_dll/: DTALite.dylib  node.csv  test_dll.py
user_guide/: 2_NEXTA_visualization_4_DTA.md  Flow_chart_v1.xlsx  readme.md  readme_doc.docx  readme_v1.docx
(+809 files in other folders)
